@@ -1,1 +1,1 @@
-0.8.1
+0.8.2
