@@ -1,3 +1,6 @@
+2007-09-11 yo
+* New script, Currency_asNumericCode.
+
 2007-09-05 Yusei
 * Added proxy role(Manager) to Assignment_updateUserSecurityGroup(assignment_workflow)
 
